@@ -12,10 +12,6 @@ window.MediathreadCollect = {
             window.MediathreadCollect.user_status[a] = userStatus[a];
         }
 
-        if (window.console) {
-            window.console.log(userStatus);
-        }
-
         if ('youtube_apikey' in userStatus) {
             window.MediathreadCollect.options.youtube_apikey =
                 userStatus.youtube_apikey;
@@ -443,8 +439,6 @@ window.MediathreadCollect = {
                 if (merge_with.html_id) {
                     me.ASYNC.remove(merge_with);
                     delete merge_with.html_id;//so it doesn't over-write asset
-                } else if (window.console) {
-                    window.console.log('ERROR: No html_id on merge-item');
                 }
 
                 //jQuery 1.0compat (for drupal)
@@ -485,9 +479,6 @@ window.MediathreadCollect = {
                     after_merge.html_id = me.assetHtmlID(after_merge);
                     me.ASYNC.display(after_merge, /*index*/assets.length - 1);
                     window.MediathreadCollect.assetBucket = assets;
-                    if (window.console) {
-                        window.console.log(assets);
-                    }
                 }
             }
 
